# sample-project-auto-cythonize

./: .gitignore  README.md  _build.py  demo.sh  pyproject.toml
package/: __init__.py  _version.py
package/b/: __init__.py
tests/: test_functions.py
